--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "curriculum-virtual",
   "version": "1.1.0",
   "description": "Curriculum virtual personal para Enrique de la Garza",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "node run test.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
